plugins {
    id 'java'
}

group 'dev.appeazethecheese'
version '1.0'

repositories {
    mavenCentral()

    maven {
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
        name = "Spigot"
    }
    maven {
        url = 'https://oss.sonatype.org/content/repositories/snapshots'
        name = 'BungeeCord'
    }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.17-R0.1-SNAPSHOT'
    compileOnly 'net.md-5:bungeecord-api:1.17-R0.1-SNAPSHOT'
    implementation files("lib/VanishNoPacket.jar")
    implementation files("lib/ProtocolLib.jar")
}

sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16
